--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ criterion = "0.3"
 opt-level = 0  # Controls the --opt-level the compiler builds with
 debug = true   # Controls whether the compiler passes `-g`
 
+[build-dependencies]
+cc = "1.0"
 
 [[bench]]
 name = "rxdp_benchmark"
