--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,10 @@ path = "src/lib.rs"
 
 [dependencies]
 bitflags = "1.2.1"
-libbpf-sys = "0.1.0-1"
+crossbeam-channel = "0.5.0"
 errno = "0.2.6"
 lazy_static = "1.4.0"
+libbpf-sys = "0.1.0-1"
 libc = "0.2.80"
 
 [features]
